--- a/regress-report.yml
+++ b/regress-report.yml
@@ -1,205 +1,207 @@
 ---
-- summary: |
-    Проверка поисковой строки
-  status: fail
+test-cases:
+  - summary: |
+      Проверка поисковой строки
+    status: fail
 
-- summary: |
-    Проверка фильтрации по категориям
-  status: fail
+  - summary: |
+      Проверка фильтрации по категориям
+    status: fail
 
-- summary: |
-    Проверка фильтров
-  status: pass
+  - summary: |
+      Проверка фильтров
+    status: pass
 
-- summary: |
-    Проверка карточек товаров
-  status: pass
+  - summary: |
+      Проверка карточек товаров
+    status: pass
 
-- summary: |
-    Проверка добавления товара в корзину
-  status: pass
+  - summary: |
+      Проверка добавления товара в корзину
+    status: pass
 
-- summary: |
-    Проверка оформления заказа
-  status: fail
+  - summary: |
+      Проверка оформления заказа
+    status: fail
 
-- summary: |
-    Проверка удаления товаров из корзины
-  status: pass
+  - summary: |
+      Проверка удаления товаров из корзины
+    status: pass
 
-- summary: |
-    Проверка кнопки перехода вперед по страницам
-  status: pass
+  - summary: |
+      Проверка кнопки перехода вперед по страницам
+    status: pass
 
-- summary: |
-    Проверка кнопки перехода назад по страницам
-  status: pass
+  - summary: |
+      Проверка кнопки перехода назад по страницам
+    status: pass
 
-- summary: |
-    Проверка кнопки перехода назад на первой странице сайта
-  status: pass
+  - summary: |
+      Проверка кнопки перехода назад на первой странице сайта
+    status: pass
 
-- summary: |
-    Проверка кнопки "Отчистить корзину"
-  status: pass
+  - summary: |
+      Проверка кнопки "Отчистить корзину"
+    status: pass
 
-- summary: |
-    Проверка скорости загрузки сайта с хорошим интернет соединением
-  status: pass
+  - summary: |
+      Проверка скорости загрузки сайта с хорошим интернет соединением
+    status: pass
 
-- summary: |
-    Проверка скорости загрузки сайта со средним интернет соединением
-  status: pass
+  - summary: |
+      Проверка скорости загрузки сайта со средним интернет соединением
+    status: pass
 
-- summary: |
-    Проверка скорости загрузки сайта с плохим интернет соединением
-  status: fail
+  - summary: |
+      Проверка скорости загрузки сайта с плохим интернет соединением
+    status: fail
 
-- summary: |
-    Проверка английской версии сайта
-  status: pass
+  - summary: |
+      Проверка английской версии сайта
+    status: pass
 
-- summary: |
-    Проверка русской версии сайта
-  status: fail
+  - summary: |
+      Проверка русской версии сайта
+    status: fail
 
-- summary: |
-    Проверка кнопки смены языка
-  status: pass
+  - summary: |
+      Проверка кнопки смены языка
+    status: pass
 
-- summary: |
-    Проверка сохранении корзины
-  status: pass
+  - summary: |
+      Проверка сохранении корзины
+    status: pass
 
-- summary: |
-    Проверка корзины при закрытии сессии браузера
-  status: pass
+  - summary: |
+      Проверка корзины при закрытии сессии браузера
+    status: pass
 
-- summary: |
-    Проверка фильтра начальной границы цены на минимальное значение
-  status: pass
+  - summary: |
+      Проверка фильтра начальной границы цены на минимальное значение
+    status: pass
 
-- summary: |
-    Проверка фильтра начальной границы цены положительные значения 
-  status: pass
+  - summary: |
+      Проверка фильтра начальной границы цены положительные значения
+    status: pass
 
-- summary: |
-    Проверка фильтра начальной границы цены на 0
-  status: pass
+  - summary: |
+      Проверка фильтра начальной границы цены на 0
+    status: pass
 
-- summary: |
-    Проверка фильтра начальной границы цены на отрицательные значения
-  status: pass
+  - summary: |
+      Проверка фильтра начальной границы цены на отрицательные значения
+    status: pass
 
-- summary: |
-    Проверка фильтра начальной границы цены на большедопустимое значение
-  status: fail
+  - summary: |
+      Проверка фильтра начальной границы цены на большедопустимое значение
+    status: fail
 
-- summary: |
-    Проверка фильтра начальной границы цены на введение букв
-  status: pass
+  - summary: |
+      Проверка фильтра начальной границы цены на введение букв
+    status: pass
 
-- summary: |
-    Проверка фильтра начальной границы цены на специальные символы
-  status: pass
+  - summary: |
+      Проверка фильтра начальной границы цены на специальные символы
+    status: pass
 
-- summary: |
-    Проверка фильтра конечной границы цены на минимальное значение
-  status: pass
+  - summary: |
+      Проверка фильтра конечной границы цены на минимальное значение
+    status: pass
 
-- summary: |
-    Проверка фильтра конечной границы цены положительные значения 
-  status: pass
+  - summary: |
+      Проверка фильтра конечной границы цены положительные значения
+    status: pass
 
-- summary: |
-    Проверка фильтра конечной границы цены на 0
-  status: pass
+  - summary: |
+      Проверка фильтра конечной границы цены на 0
+    status: pass
 
-- summary: |
-    Проверка фильтра конечной границы цены на отрицательные значения
-  status: fail
+  - summary: |
+      Проверка фильтра конечной границы цены на отрицательные значения
+    status: fail
 
-- summary: |
-    Проверка фильтра конечной границы цены на большедопустимое значение
-  status: pass
+  - summary: |
+      Проверка фильтра конечной границы цены на большедопустимое значение
+    status: pass
 
-- summary: |
-    Проверка фильтра конечной границы цены на введение букв
-  status: pass
+  - summary: |
+      Проверка фильтра конечной границы цены на введение букв
+    status: pass
 
-- summary: |
-    Проверка фильтра конечной границы цены на специальные символы
-  status: pass
+  - summary: |
+      Проверка фильтра конечной границы цены на специальные символы
+    status: pass
 
-- summary: |
-    Проверка оформления заказа Google Chrome последней версии
-  status: pass
+  - summary: |
+      Проверка оформления заказа Google Chrome последней версии
+    status: pass
 
-- summary: |
-    Проверка работы сайта на Firefox последней версии
-  status: pass
+  - summary: |
+      Проверка работы сайта на Firefox последней версии
+    status: pass
 
-- summary: |
-    Проверка работы сайта на Edge последней версии
-  status: pass
+  - summary: |
+      Проверка работы сайта на Edge последней версии
+    status: pass
 
-  bugreports:
-- summary: |
-    Фильтры по производителю сбивают результаты поиска
-  environment: |
-    Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
-    Windows 11 Pro 23H2
-  steps-to-reproduce: |
-    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
-    2. Ввести в поисковую строку запрос
-    3. Нажать любой фильтр производителя
-  expected-result: |
-    Результаты поиска фильтруются по производителю
-  actual-result: |
-    Фильтры по производителю сбивают результаты поиска и выводят все товары
-    Ошибка изображена на скриншоте rbug01.jpg
 
-- summary: |
-    В русской версии сайта при обновлении страницы язык переключается на английский
-  environment: |
-    Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
-    Windows 11 Pro 23H2
-  steps-to-reproduce: |
-    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
-    2. Поменять язык на русский в шапке сайта
-    3. Обновить страницу в браузере
-  expected-result: |
-    Язык остается русским
-  actual-result: |
-    Язык меняется на английский
-    Ошибка изображена на скриншоте rbug02.gif
+bugreports:
+  - summary: |
+      Фильтры по производителю сбивают результаты поиска
+    environment: |
+      Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+      Windows 11 Pro 23H2
+    steps-to-reproduce: |
+      1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+      2. Ввести в поисковую строку запрос
+      3. Нажать любой фильтр производителя
+    expected-result: |
+      Результаты поиска фильтруются по производителю
+    actual-result: |
+      Фильтры по производителю сбивают результаты поиска и выводят все товары
+      Ошибка изображена на скриншоте rbug01.jpg
 
-- summary: |
-    При большом начальном значении фильтра цены все равно отображаются все товары
-  environment: |
-    Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
-    Windows 11 Pro 23H2
-  steps-to-reproduce: |
-    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
-    2. Найти фильтры цены в боком меню
-    3. Ввести большое начальное значение цены, например "9999"
-  expected-result: |
-    Нет результатов по фильтрации
-  actual-result: |
-    Остаются все товары в каталоге
-    Ошибка изображена на скриншоте rbug03.jpg
+  - summary: |
+      В русской версии сайта при обновлении страницы язык переключается на английский
+    environment: |
+      Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+      Windows 11 Pro 23H2
+    steps-to-reproduce: |
+      1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+      2. Поменять язык на русский в шапке сайта
+      3. Обновить страницу в браузере
+    expected-result: |
+      Язык остается русским
+    actual-result: |
+      Язык меняется на английский
+      Ошибка изображена на скриншоте rbug02.gif
 
-- summary: |
-    При минимальном количестве товаров верстка съезжает
-  environment: |
-    Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
-    Windows 11 Pro 23H2
-  steps-to-reproduce: |
-    1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
-    2. Найти фильтры цены в боком меню
-    3. Ввести конечное значение цены, например "1"
-  expected-result: |
-    Нормально отображется один товар 
-  actual-result: |
-    Вертска съезжает на большинстве элементах сайта в каталоге
-    Ошибка изображена на скриншоте rbug04.jpg
+  - summary: |
+      При большом начальном значении фильтра цены все равно отображаются все товары
+    environment: |
+      Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+      Windows 11 Pro 23H2
+    steps-to-reproduce: |
+      1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+      2. Найти фильтры цены в боком меню
+      3. Ввести большое начальное значение цены, например "9999"
+    expected-result: |
+      Нет результатов по фильтрации
+    actual-result: |
+      Остаются все товары в каталоге
+      Ошибка изображена на скриншоте rbug03.jpg
+
+  - summary: |
+      При минимальном количестве товаров верстка съезжает
+    environment: |
+      Google Chrome Версия 126.0.6478.182 (Официальная сборка), (64 бит)
+      Windows 11 Pro 23H2
+    steps-to-reproduce: |
+      1. Зайти на главную магазина https://hexlet-products-store.vercel.app/
+      2. Найти фильтры цены в боком меню
+      3. Ввести конечное значение цены, например "1"
+    expected-result: |
+      Нормально отображется один товар 
+    actual-result: |
+      Вертска съезжает на большинстве элементах сайта в каталоге
+      Ошибка изображена на скриншоте rbug04.jpg
